# webwrap

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: design.md
include/webwrap/: webwrap.h
src/: webwrap.c
src/cli/: main.c
src/platform/apple/: ww_apple_http.h  ww_apple_http.m
tests/: test_macos_get.mm  test_sum.cpp
